--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         <h2 class="item2">Metas de Karina</h2>
         <p class="item2">Texto de las metas</p>
     </div>
+    <h1>Mi proyecto desglozado (Karina)</h1>
+    <div class="metas">
+        <div>
+            <h1 class="tmetas">Corto plazo</h1>
+            <p class="infometa">Sacar buenas calificaciones en el ultimo trimestre y
+                culminar el año satisfactoriamente</p> 
+        </div>
+    </div>
     <!--Pie de pagina-->
     <footer>
         <p>&copy; 2025 Mi proyecto de vida</p>
